# a3exception

./: HISTORY.md  MANIFEST.in  Makefile  README.md  README_ZH.md  pyproject.toml  requirements.txt  setup.cfg
a3exception/: dynamic_error_factory.py  errors.py
scripts/: coverage.sh
tests/: test_dynamic_error_factory.py  test_errors.py
