[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a3exception"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "a3py >= 0.3.0",
]
authors = [
  {name = "three-kinds", email = "3179158552@qq.com"},
]
description = "a3exception  is a package for unifying exceptions during front-end and back-end communication."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/three-kinds/a3exception"
Source = "https://github.com/three-kinds/a3exception"

[tool.setuptools.dynamic]
version = {attr = "a3exception.__version__"}

[tool.setuptools.packages.find]
include = ["a3exception*"]

[tool.mypy]
packages = [
    "a3exception",
    "tests"
]
disable_error_code = [
    "import-untyped",
    "method-assign"
]

[tool.ruff]
src = [
    "a3exception",
    "tests"
]
line-length = 120
