[metadata]
name = a3exception
version = attr: a3exception.__version__
url = https://github.com/three-kinds/a3exception
author = three-kinds
author_email = 3179158552@qq.com
description = Framework-agnostic exception component.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/three-kinds/a3exception
    Source = https://github.com/three-kinds/a3exception

[options]
python_requires = >=3.8
packages = a3exception
include_package_data = true
zip_safe = false
install_requires =
